buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

apply plugin: "java"
apply plugin: "io.spring.dependency-management"
apply plugin: "org.springframework.boot"

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

repositories {
    mavenCentral()
}

dependencies {
    implementation("org.springframework.boot:spring-boot-starter")

    implementation("org.bouncycastle:bcprov-debug-jdk15on:1.66")
    implementation("org.bouncycastle:bcpkix-jdk15on:1.66")
    // There is no official bcpkix jar with debug symbols. Optionally use the local jar.
//    implementation(fileTree(include: ['*.jar'], dir: 'lib'))

    implementation("commons-codec:commons-codec:1.15")
    implementation("org.apache.commons:commons-lang3:3.9")

    testImplementation("org.springframework.boot:spring-boot-starter-test") {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
}

test {
    useJUnitPlatform()
    testLogging {
        events "skipped", "passed", "failed"
    }
}

wrapper {
    gradleVersion = "6.2.2"
    distributionType = Wrapper.DistributionType.ALL
}
